# amanuensis-analysis

./: .gitignore  01 sustained bass [2025-12-29-22-19-46]_Report.html  02 sustained treble [2025-12-29-22-19-46]_Report.html  03 transient bass [2025-12-29-22-19-46]_Report.html  04 transient treble [2025-12-29-22-19-46]_Report.html  MusicBox.maxpat  README.md  README_M4L.md  analyze_audio.py  analyze_transients.py  audio_analysis_report.html  audio_engine.py  copy_audio.py  credentials.json  generate_report.py  migrate_analysis.py  preserve.py  requirements.txt  run_local_llm.py  test_integration_v2.py  test_transcription_local.py  transcription_bot.py  transient_analysis.html  vst_renderer.py
BasicVolumeVST/: CMakeLists.txt
analysis_01 sustained bass [2025-12-29-22-19-46]/: report.html  report_data.json
analysis_02 sustained treble [2025-12-29-22-19-46]/: report.html  report_data.json
analysis_03 transient bass [2025-12-29-22-19-46]/: report.html  report_data.json
analysis_04 transient treble [2025-12-29-22-19-46]/: report.html  report_data.json
sound_design/: audio_engine.py  new_sound.md  sound_design.py
sound_design/BasicVolumeVST/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
sound_design/sounds/1/: analysis.json  sound_design.py
sound_design/sounds/2/: analysis.json  sound_design.py
sounds/1/: analysis.json
sounds/2/: analysis.json  sound_design.py
sounds/3/: analysis.json
transcription/: record_desktop_audio.py  test_integration.py  transcription_bot.py  transcription_bot_original.py
(+1 files in other folders)
